reports/release/v2.1.0-pre/release-acceptance.md
# DIP Release Acceptance

Release version: `v2.1.0-pre`
Source commit: `local-validation`
Validation passed: `True`
Computed policy preflight observed: `True`
Computed policy preflight result: `approval_required`
Computed simulation observed: `True`
Computed simulation cases: `13`
Computed simulation domains: `3`
Computed simulation decision shapes: `3`
Computed decision diff observed: `True`
Computed decision diff changed outcomes: `3`
Case manifest valid: `True`
Case manifest artifacts: `27`
Durable case manifest observed: `True`
Durable case manifest valid: `True`
Append-only chain valid: `True`
Case mutation detected: `False`
Replay from manifest observed: `True`
Approval bound to manifest: `True`
Approval role binding valid: `True`
Approval authority evaluated: `True`
Approval authority valid: `True`
AI self-approval blocked: `True`
External identity provider observed: `False`
Repository governance policy observed: `True`
Admin enforcement required: `True`
Required status checks observed: `True`
Required approving review count observed: `1`
Codeowner review required observed: `True`
Conversation resolution required observed: `True`
Break-glass policy defined: `True`
Release lifecycle policy observed: `True`
Release lifecycle valid: `True`
External identity contract observed: `True`
External identity contract valid: `True`
Live external identity provider authenticated: `False`
Durable evidence store policy observed: `True`
Durable store contract valid: `True`
Production storage backend observed: `False`
Capability governance observed: `True`
Capability governance valid: `True`
Resolved capability count: `3`
Shared context contract observed: `True`
Shared context contract valid: `True`
Solo-maintainer exception observed: `True`
Solo-maintainer exception valid: `True`
Solo-maintainer constraint: `True`
Independent human review available: `False`
Independent human review observed: `False`
Review relaxation allowed: `True`
Review relaxation max minutes: `30`
Review gate restoration required: `True`
Schema stability observed: `True`
Schema stability valid: `True`
Frozen contract count: `16`
Compatibility rule count: `5`
Negative fixture count: `2`
Negative fixtures valid: `True`
Runtime readiness assessment observed: `True`
Runtime readiness percent: `0.0`
Production decision authority percent: `0.0`
Product review surface observed: `True`
Product review surface count: `11`
Runtime integration authorized: `False`
Production decision execution authorized: `False`
Release acceptance passed: `True`

## Blocked Claims

- `runtime integration is authorized`
- `production decision execution is authorized`
- `independent human review was observed for solo-maintainer merges`
